feat: Update all URLs to custom domain teori-test.no

--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!doctype html>
 <html lang="no">
-  <head>
-    <meta charset="UTF-8" />
 
-    <!-- Favicon & App Icons -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- Viewport & Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1a1d2e" />
+  <!-- Favicon & App Icons -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
 
-    <!-- Primary SEO Meta Tags -->
-    <title>Lappen.no – Gratis øvingsprøve for førerkort klasse B</title>
-    <meta name="description" content="Øv gratis på teoriprøven for førerkort klasse B (personbil). Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer. Bestå teoriprøven på første forsøk!" />
-    <meta name="keywords" content="teoriprøve, førerkort, klasse B, øvingsprøve, trafikkregler, skilt, førerkort Norge, lappen, teori bil" />
-    <meta name="author" content="Lappen.no" />
-    <link rel="canonical" href="https://animated-unicorn-c10425.netlify.app/" />
+  <!-- Viewport & Mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#1a1d2e" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://animated-unicorn-c10425.netlify.app/" />
-    <meta property="og:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
-    <meta property="og:description" content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
-    <meta property="og:locale" content="nb_NO" />
-    <meta property="og:site_name" content="Lappen.no" />
+  <!-- Primary SEO Meta Tags -->
+  <title>Lappen.no – Gratis øvingsprøve for førerkort klasse B</title>
+  <meta name="description"
+    content="Øv gratis på teoriprøven for førerkort klasse B (personbil). Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer. Bestå teoriprøven på første forsøk!" />
+  <meta name="keywords"
+    content="teoriprøve, førerkort, klasse B, øvingsprøve, trafikkregler, skilt, førerkort Norge, lappen, teori bil" />
+  <meta name="author" content="Lappen.no" />
+  <link rel="canonical" href="https://teori-test.no/" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
-    <meta name="twitter:description" content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://teori-test.no/" />
+  <meta property="og:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
+  <meta property="og:description"
+    content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
+  <meta property="og:locale" content="nb_NO" />
+  <meta property="og:site_name" content="Lappen.no" />
 
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
+  <meta name="twitter:description"
+    content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
 
-    <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://tdclflxovwhqutaikvuj.supabase.co; img-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://upload.wikimedia.org data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline';" />
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
 
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; connect-src 'self' https://tdclflxovwhqutaikvuj.supabase.co; img-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://upload.wikimedia.org data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline';" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Lappen.no",
-      "url": "https://animated-unicorn-c10425.netlify.app/",
+      "url": "https://teori-test.no/",
       "description": "Gratis øvingsprøve for teoriprøven til førerkort klasse B (personbil) i Norge.",
       "applicationCategory": "EducationalApplication",
       "operatingSystem": "All",
@@ -62,9 +68,11 @@
       }
     }
     </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
