rebrand: Rename Lappen.no to Teori-test.no throughout the app

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
   <meta name="theme-color" content="#1a1d2e" />
 
   <!-- Primary SEO Meta Tags -->
-  <title>Lappen.no – Gratis øvingsprøve for førerkort klasse B</title>
+  <title>Teori-test.no – Gratis øvingsprøve for førerkort klasse B</title>
   <meta name="description"
     content="Øv gratis på teoriprøven for førerkort klasse B (personbil). Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer. Bestå teoriprøven på første forsøk!" />
   <meta name="keywords"
     content="teoriprøve, førerkort, klasse B, øvingsprøve, trafikkregler, skilt, førerkort Norge, lappen, teori bil" />
-  <meta name="author" content="Lappen.no" />
+  <meta name="author" content="Teori-test.no" />
   <link rel="canonical" href="https://teori-test.no/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://teori-test.no/" />
-  <meta property="og:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
+  <meta property="og:title" content="Teori-test.no – Gratis øvingsprøve for førerkort klasse B" />
   <meta property="og:description"
     content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
   <meta property="og:locale" content="nb_NO" />
-  <meta property="og:site_name" content="Lappen.no" />
+  <meta property="og:site_name" content="Teori-test.no" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Lappen.no – Gratis øvingsprøve for førerkort klasse B" />
+  <meta name="twitter:title" content="Teori-test.no – Gratis øvingsprøve for førerkort klasse B" />
   <meta name="twitter:description"
     content="Øv gratis på teoriprøven for førerkort klasse B. Realistiske øvingsprøver med trafikkregler, skilt, sikkerhet og mer." />
 
@@ -50,7 +50,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "Lappen.no",
+      "name": "Teori-test.no",
       "url": "https://teori-test.no/",
       "description": "Gratis øvingsprøve for teoriprøven til førerkort klasse B (personbil) i Norge.",
       "applicationCategory": "EducationalApplication",
@@ -64,7 +64,7 @@
       },
       "author": {
         "@type": "Organization",
-        "name": "Lappen.no"
+        "name": "Teori-test.no"
       }
     }
     </script>
