--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- Security Headers -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; connect-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://www.google-analytics.com; img-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://upload.wikimedia.org data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;" />
+    content="default-src 'self'; connect-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://www.google-analytics.com https://analytics.google.com https://*.google-analytics.com https://*.analytics.google.com; img-src 'self' https://tdclflxovwhqutaikvuj.supabase.co https://upload.wikimedia.org data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;" />
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
 
